# aufseher

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
configs/: aufseher.service  aufseher.yaml
src/: actions.rs  aufseher.rs  config.rs  handlers.rs  lib.rs  main.rs  matching.rs  openai.rs
tests/: regex_tests.rs
