[package]
authors = ["i@k4yt3x.com"]
categories = ["command-line-utilities"]
description = "A simple regex-based Telegram anti-spam bot"
edition = "2021"
homepage = "https://github.com/k4yt3x/aufseher"
keywords = ["telegram"]
license = "GPL-2.0-only"
name = "aufseher"
readme = "README.md"
repository = "https://github.com/k4yt3x/aufseher"
version = "1.6.0"

[[bin]]
name = "aufseher"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
fancy-regex = "0.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
teloxide = { version = "0.12", features = ["macros", "throttle"] }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
