[package]
name = "aufseher"
version = "1.9.3"
authors = ["i@k4yt3x.com"]
edition = "2024"
description = "A simple regex-based Telegram anti-spam bot"
readme = "README.md"
homepage = "https://github.com/k4yt3x/aufseher"
repository = "https://github.com/k4yt3x/aufseher"
license = "GPL-2.0-only"
keywords = ["telegram"]
categories = ["command-line-utilities"]

[[bin]]
name = "aufseher"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
fancy-regex = "0.18"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
teloxide = { version = "0.17", default-features = false, features = ["macros", "throttle", "ctrlc_handler", "rustls"] }
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
